
2007-12-24 cjg
 * Removed bin/list_user_emails, replacing it with an export plugin to 
    perform the same action.

2008-01-04 cjg
 * Added mtime function to EPrints::Utils
 * Moved update routines for static and view pages into their own modules.
 * views now use a "variations" config option
 * New function to get all eprints ids from a dataset, grouped by a certain 
    field. Used to show how many in a section in views.
 * Writing pages now creates any needed directories.
 * Tweaked the way session renders a subject tree.
 * nb. Some debug code left in this commit

2008-01-09 cjg
 * Added EPrints::Bench -- used for testing speed of sections of code.

2008-01-09 tdb
 * Changed name of ordervalue_single to ordervalue_basic, fixing #3201
 * Added $session and $langid to call to ordervalue_basic, really fixing #3201

2008-01-11 tdb
 * import_subjects should use the import ids, fixing #3209

2008-01-14 tdb
 * Use Text::Unidecode to create sort values, fixing #3200
 * Removed Text::BibTeX dependency, fixing #3202
 * EPrints::Metafield::render_value_withopts now checks definedness by using
    EPrints::Utils::is_set, fixing #2923
 * Added quote_value and quote_identifier methods to Database.pm
 * Replaced all occurences of prep_value with quote_value
 * Replaced all (?) occurences of \" in database values with quote_value
 * Added check for whether the subjects field is configured in MODS (METS)
    export

2008-01-15 tdb
 * Check whether an executable is set as "NOTFOUND", fixing #2874
 * Replaced $session->html_phrase with $self->html_phrase in Screen::Import,
    fixing #3203
 * Now checks for visibility all in Screen::Import, fixing #3207

2008-01-15 cjg
 * Added code to keep track of which phrases were used during a $session
 * Added code to report on this, but currently disabled the report.

2008-01-15 cjg
 * Added template option to views.
 * Changed "template_id" option in page generation to "template"